<resources>
    <string name="app_name">Health</string>
    <string name="label">phonenumber</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="enter_code">Enter OTP</string>
    <string name="OTP">GET OTP</string>
    <string name="name">FullName</string>
    <string name="signup">REGISTER</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="app_time">%1$s %2$s</string>
    <string name="vegetable_desc">
        Leafy greens, including spinach and kale, are a key plant-based source of potassium, vitamin
        A, and calcium. They also provide protein and fiber.
           Some researchers say thatTrusted Source eating green leafy vegetables is helpful for
        people with diabetes due to their high antioxidant content and starch-digesting enzymes.
    </string>

    <string name="beans">
       Beans are an excellent food option for people with diabetes.
        They are source of plant-based protein, and they can satisfy the
        appetite while helping people reduce their carbohydrate intake.
       Beans are also low on the GI scale and are better for blood sugar regulation
        than many other starchy foods.
    </string>

    <string-array name="Meals">
        <item>Before Meals</item>
        <item>After Meals</item>
    </string-array>

    <string name="fish">
      People need a certain amount of healthful fats to keep their body functioning and to
        promote heart and brain health.

       The ADA report that a diet high in polyunsaturated and monounsaturated fats can
        improve blood sugar control and blood lipids in people with diabetes.
    </string>

    <string-array name="disease">
        <item>Diabetes</item>
        <item>Heart Attack</item>
        <item>Both</item>
    </string-array>
    <string name="title_activity_home">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_medicine">ScrollingActivity</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="tablets">Tablets</string>

    <string name="disease_education">

        <b>What is Diabetes mellitus </b>\n\n commonly known as diabetes, is a metabolic disease that causes
        high blood
        sugar. The hormone insulin moves sugar from the blood into your cells to be stored or used
        for energy. With diabetes, your body either doesn’t make enough insulin or can’t effectively
        use the insulin it does make.
        Untreated high blood sugar from diabetes can damage your nerves, eyes, kidneys, and
        other organs.\n\n</string>

    <string name="disease_education2">

        Types of Diabetes:\n\n

       <b>Type 1 Diabetes </b> is an autoimmune disease. The immune system attacks and destroys cells in
        the pancreas, where insulin is made. It’s unclear what causes this attack. About 10 percent
        of people with diabetes have this type.\n\n
       <b>Type 2 Diabetes </b> occurs when your body becomes resistant to insulin, and sugar builds up in
        your blood.\n\n
       <b>Prediabetes </b> occurs when your blood sugar is higher than normal, but it’s not high enough
        for a diagnosis of type 2 diabetes.\n\n
       <b>Gestational diabetes </b> is high blood sugar during pregnancy. Insulin-blocking hormones
        produced by the placenta cause this type of diabetes.\n\n
       A rare condition called diabetes insipidus is not related to diabetes mellitus,
        although it has a similar name. It’s a different condition in which your
        kidneys remove too much fluid from your body.\n\n

    </string>

    <string name="symptoms">
        <b>Symptoms of diabetes</b>\n
        Diabetes symptoms are caused by rising blood sugar.\n\n

        <b>General symptoms </b>\n
        The general symptoms of diabetes include:\n

        increased hunger\n
        increased thirst\n
        weight loss\n
        frequent urination\n
        blurry vision\n
        extreme fatigue\n
        sores that don’t heal\n\n
        </string>

    <string name="causes">

        <b>Causes of diabetes </b>\n
        Different causes are associated with each type of diabetes.\n\n

        <b>Type 1 diabetes </b>\n
        Doctors don’t know exactly what causes type 1 diabetes. For some reason, the immune system
        mistakenly attacks and destroys insulin-producing beta cells in the pancreas.\n

        Genes may play a role in some people. It’s also possible that a virus sets off the
        immune system attack.\n\n

        <b> Type 2 diabetes </b>\n
        Type 2 diabetes stems from a combination of genetics and lifestyle factors.
        Being overweight or obese increases your risk too. Carrying extra weight, especially
        in your belly, makes your cells more resistant to the effects of insulin on your blood sugar.
        \n
        This condition runs in families. Family members share genes that make them more likely to
        get type 2 diabetes and to be overweight.\n\n

        <b>Gestational diabetes </b>\n
        Gestational diabetes is the result of hormonal changes during pregnancy. The placenta
        produces hormones that make a pregnant woman’s cells less sensitive to the effects of
        insulin. This can cause high blood sugar during pregnancy.\n

        Women who are overweight when they get pregnant or who gain too much weight during their
        pregnancy are more likely to get gestational diabetes.\n\n

        <b>General </b>\n
        Both genes and environmental factors play a role in triggering diabetes. Get more
        information here on the causes of diabetes.\n\n

    </string>
    <string name="nuts">Nuts are another excellent addition to the diet. Like fish, nuts contain healthful fatty acids that help keep the heart healthy.  Walnuts are especially high in omega-3 fatty acids called alpha-lipoic acid (ALA). Like other omega-3s, ALA is important for good heart health.</string>
    <string name="avocados_desc">Avocados have less than 1 gram of sugar, few carbohydrates, a high fiber content, and healthy fats, so you don’t have to worry about them raising your blood sugar levels</string>
    <string name="eggs_desc">"Regular eggs consumption may also reduce your heart disease risk in several ways.  "</string>

    <string name="dietEdu">Experience a good diet for keeping your health strength</string>
    <string name="analysis">Observe your daily analysis</string>
    <string name="awarenessEdu">Keep aware about diabetes and get all updates about disease</string>
    <string name="logout">Logout</string>
    <string name="Setting">Setting</string>
    <string name="Profile">Profile</string>


</resources>